testsuite/tests/backpack/should_fail/bkpfail15.stderr
[1 of 3] Processing p
  [1 of 3] Compiling A[sig]           ( p/A.hsig, nothing )
  [2 of 3] Compiling Q[sig]           ( p/Q.hsig, nothing )
  [3 of 3] Compiling P                ( p/P.hs, nothing )
[2 of 3] Processing q
  Instantiating q
  [1 of 1] Compiling Q                ( q/Q.hs, bkpfail15.out/q/Q.o )
[3 of 3] Processing r
  [1 of 1] Compiling A[sig]           ( r/A.hsig, nothing )

bkpfail15.bkp:8:9: error:
    • Identifier ‘f’ has conflicting definitions in the module
      and its hsig file
      Main module: f :: GHC.Types.Bool
      Hsig file:  f :: GHC.Types.Int
      The two types are different
    • while checking that q:Q implements signature Q in p[A=<A>,Q=q:Q]
